# black-hat-rust

ch_01/me_sha1_cracker/: Cargo.toml
ch_01/me_sha1_cracker/src/: main.rs
ch_01/snippets/enums/src/: lib.rs
ch_02/me_tricoder/: Cargo.toml
ch_02/me_tricoder/src/: main.rs  model.rs  ports.rs  subdomains.rs
ch_02/tricoder/src/: main.rs
ch_03/me_tricoder/: Cargo.toml
ch_03/me_tricoder/src/: main.rs  ports.rs  subdomains.rs
ch_04/me_tricoder/: Cargo.toml
ch_04/me_tricoder/src/: error.rs  main.rs  model.rs  ports.rs
ch_04/me_tricoder/src/modules/: mod.rs
ch_04/me_tricoder/src/modules/http/: dotenv_disclosure.rs  gitlab_open_registrations.rs  mod.rs
ch_05/me_crawler/: Cargo.toml
ch_05/me_crawler/src/: crawler.rs  error.rs  main.rs
ch_05/me_crawler/src/spiders/: cvedetails.rs  mod.rs
