[package]
name = "me_tricoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
reqwest = {"version" = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
