[package]
name = "me_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
reqwest = {"version" = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
rayon = "1.5"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3"
rand = "0.8"
tokio-stream = "0.1"
async-trait = "0.1.58"
log = "0.4"
env_logger = "0.9"
